# ClaudeVST

./: .gitignore  .mcp.json  .ralph-last-processed  CLAUDE.md  CMakeLists.txt  Info.plist  MULTI_AGENT_SYSTEM.md  README.md  START_TEACHER.md
.claude/: tasks.json
agents/teacher/: teacher_loop.py  teacher_mcp_api.py  teacher_watcher.py
claude-plugins/teacher-agent/: README.md
claude-plugins/teacher-agent/.claude-plugin/: plugin.json
claude-plugins/teacher-agent/commands/: help.md  start.md  status.md  stop.md  teacher-start.md  teacher.md
claude-plugins/teacher-agent/scripts/: teacher-monitor.sh
data/: README.md
data/teacher-state/: instructions_refinements.md  student_progress.json
development/: RALPH_EFFECTIVENESS.md  RALPH_MANAGEMENT_CHECKLIST.md  backlog.md  interfaces.md
docs/: ABLETONOSC.md  ABLETON_MCP.md  ARCHITECTURE.md  CONVERSATION_LOG.md  DOCUMENT_INDEXING.md  GENRE-SEGMENTER.md  MCP_PARAMETER_TEST_REPORT.md  MESSAGES.md  PARAMETER_READING_RESEARCH.md  PRODUCTION_EXPERTISE_RESEARCH.md  SYSTEM.md  TTS.md  UNIFIED_BRIDGE.md  VST.md  WHISPER.md
docs/plans/: 2026-01-17-ableton-control-expansion.md  2026-01-17-sound-design-coaching-brainstorm.md  2026-01-17-sound-design-coaching-plan.md  2026-01-17-unified-bridge-enhancements.md  2026-01-18-automation-arrangement-design.md  2026-01-21-reference-track-loader-design.md  2026-01-21-reference-track-loader.md
hooks/: master_hook.sh  restart_all.sh  start_all.sh  stop_all.sh
io/tts/: TTSCompanion.swift  tts  tts_watcher.py
io/voice/: voice_listener.py
scripts/: build_and_deploy.sh  launch-task.sh  post_build.sh
services/: README.md
services/allin1/: Dockerfile  analyze.py  requirements.txt
services/audio-analysis/: README.md  reference_analyzer.py
services/genre-segmenter/: Dockerfile  analyze.py  requirements.txt
services/genre-segmenter/segmenter/: __init__.py  beats.py  boundaries.py  config.py  features.py  functional.py  structural.py
services/msaf/: Dockerfile  analyze.py  requirements.txt
src/: AudioAnalyzer.cpp  AudioAnalyzer.h  ClaudeClient.cpp  ClaudeClient.h  DockerRunner.cpp  DockerRunner.h  OSCClient.cpp  OSCClient.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RadialSegmentView.cpp  RadialSegmentView.h  ReferenceTrackData.cpp  ReferenceTrackData.h  SpeechRecognizer.cpp  SpeechRecognizer.h  SpeechSynthesizer.h  SpeechSynthesizer.mm  UnifiedBridgeClient.cpp  UnifiedBridgeClient.h  UnifiedControlAdapter.cpp  UnifiedControlAdapter.h
